parser/src/snapshots/rustpython_parser__parser__tests__comment_sameline.snap
---
source: parser/src/parser.rs
expression: parse_program(&source).unwrap()

---
[
    Located {
        location: Location {
            row: 1,
            column: 1,
        },
        custom: (),
        node: While {
            test: Located {
                location: Location {
                    row: 1,
                    column: 7,
                },
                custom: (),
                node: Constant {
                    value: Int(
                        1,
                    ),
                    kind: None,
                },
            },
            body: [
                Located {
                    location: Location {
                        row: 2,
                        column: 5,
                    },
                    custom: (),
                    node: Expr {
                        value: Located {
                            location: Location {
                                row: 2,
                                column: 7,
                            },
                            custom: (),
                            node: BinOp {
                                left: Located {
                                    location: Location {
                                        row: 2,
                                        column: 5,
                                    },
                                    custom: (),
                                    node: Name {
                                        id: "a",
                                        ctx: Load,
                                    },
                                },
                                op: Add,
                                right: Located {
                                    location: Location {
                                        row: 2,
                                        column: 9,
                                    },
                                    custom: (),
                                    node: Constant {
                                        value: Int(
                                            1,
                                        ),
                                        kind: None,
                                    },
                                },
                            },
                        },
                        config_comment: [],
                    },
                },
                Located {
                    location: Location {
                        row: 3,
                        column: 5,
                    },
                    custom: (),
                    node: Pass {
                        config_comment: [
                            "pass",
                        ],
                    },
                },
                Located {
                    location: Location {
                        row: 4,
                        column: 11,
                    },
                    custom: (),
                    node: Assign {
                        targets: [
                            Located {
                                location: Location {
                                    row: 5,
                                    column: 5,
                                },
                                custom: (),
                                node: Name {
                                    id: "a",
                                    ctx: Load,
                                },
                            },
                        ],
                        value: Located {
                            location: Location {
                                row: 5,
                                column: 9,
                            },
                            custom: (),
                            node: Constant {
                                value: Int(
                                    3,
                                ),
                                kind: None,
                            },
                        },
                        type_comment: None,
                        config_comment: [
                            "assign",
                        ],
                    },
                },
                Located {
                    location: Location {
                        row: 6,
                        column: 5,
                    },
                    custom: (),
                    node: Delete {
                        targets: [
                            Located {
                                location: Location {
                                    row: 7,
                                    column: 9,
                                },
                                custom: (),
                                node: Name {
                                    id: "a",
                                    ctx: Load,
                                },
                            },
                        ],
                        config_comment: [
                            "del",
                        ],
                    },
                },
            ],
            orelse: [],
            config_comment: [],
        },
    },
    Located {
        location: Location {
            row: 9,
            column: 1,
        },
        custom: (),
        node: If {
            test: Located {
                location: Location {
                    row: 9,
                    column: 4,
                },
                custom: (),
                node: Constant {
                    value: Int(
                        1,
                    ),
                    kind: None,
                },
            },
            body: [
                Located {
                    location: Location {
                        row: 10,
                        column: 5,
                    },
                    custom: (),
                    node: Expr {
                        value: Located {
                            location: Location {
                                row: 10,
                                column: 5,
                            },
                            custom: (),
                            node: Name {
                                id: "a",
                                ctx: Load,
                            },
                        },
                        config_comment: [],
                    },
                },
            ],
            orelse: [],
            config_comment: [
                "s",
            ],
        },
    },
]
