parser/src/snapshots/rustpython_parser__parser__tests__comment_semicolon.snap
---
source: parser/src/parser.rs
expression: parse_program(&source).unwrap()

---
[
    Located {
        location: Location {
            row: 1,
            column: 1,
        },
        custom: (),
        node: For {
            target: Located {
                location: Location {
                    row: 1,
                    column: 5,
                },
                custom: (),
                node: Name {
                    id: "i",
                    ctx: Load,
                },
            },
            iter: Located {
                location: Location {
                    row: 1,
                    column: 12,
                },
                custom: (),
                node: Constant {
                    value: Str(
                        "12",
                    ),
                    kind: None,
                },
            },
            body: [
                Located {
                    location: Location {
                        row: 2,
                        column: 5,
                    },
                    custom: (),
                    node: Assign {
                        targets: [
                            Located {
                                location: Location {
                                    row: 3,
                                    column: 5,
                                },
                                custom: (),
                                node: Name {
                                    id: "i",
                                    ctx: Load,
                                },
                            },
                        ],
                        value: Located {
                            location: Location {
                                row: 3,
                                column: 9,
                            },
                            custom: (),
                            node: Name {
                                id: "i",
                                ctx: Load,
                            },
                        },
                        type_comment: None,
                        config_comment: [
                            "comment",
                        ],
                    },
                },
                Located {
                    location: Location {
                        row: 3,
                        column: 12,
                    },
                    custom: (),
                    node: Expr {
                        value: Located {
                            location: Location {
                                row: 4,
                                column: 10,
                            },
                            custom: (),
                            node: Call {
                                func: Located {
                                    location: Location {
                                        row: 4,
                                        column: 5,
                                    },
                                    custom: (),
                                    node: Name {
                                        id: "print",
                                        ctx: Load,
                                    },
                                },
                                args: [
                                    Located {
                                        location: Location {
                                            row: 4,
                                            column: 11,
                                        },
                                        custom: (),
                                        node: Name {
                                            id: "i",
                                            ctx: Load,
                                        },
                                    },
                                ],
                                keywords: [],
                            },
                        },
                        config_comment: [
                            "cc",
                        ],
                    },
                },
            ],
            orelse: [],
            type_comment: None,
            config_comment: [],
        },
    },
]
