parser/src/snapshots/rustpython_parser__parser__tests__confog_comment.snap
---
source: parser/src/parser.rs
expression: parse_program(&source).unwrap()

---
[
    Located {
        location: Location {
            row: 1,
            column: 1,
        },
        custom: (),
        node: ClassDef {
            name: "A",
            bases: [],
            keywords: [],
            body: [
                Located {
                    location: Location {
                        row: 2,
                        column: 12,
                    },
                    custom: (),
                    node: Expr {
                        value: Located {
                            location: Location {
                                row: 2,
                                column: 12,
                            },
                            custom: (),
                            node: Constant {
                                value: ConfigComment(
                                    "test",
                                ),
                                kind: None,
                            },
                        },
                    },
                },
                Located {
                    location: Location {
                        row: 3,
                        column: 5,
                    },
                    custom: (),
                    node: FunctionDef {
                        name: "fun",
                        args: Arguments {
                            posonlyargs: [],
                            args: [],
                            vararg: None,
                            kwonlyargs: [],
                            kw_defaults: [],
                            kwarg: None,
                            defaults: [],
                        },
                        body: [
                            Located {
                                location: Location {
                                    row: 4,
                                    column: 16,
                                },
                                custom: (),
                                node: Expr {
                                    value: Located {
                                        location: Location {
                                            row: 4,
                                            column: 16,
                                        },
                                        custom: (),
                                        node: Constant {
                                            value: ConfigComment(
                                                "unroll",
                                            ),
                                            kind: None,
                                        },
                                    },
                                },
                            },
                            Located {
                                location: Location {
                                    row: 6,
                                    column: 9,
                                },
                                custom: (),
                                node: For {
                                    target: Located {
                                        location: Location {
                                            row: 6,
                                            column: 13,
                                        },
                                        custom: (),
                                        node: Name {
                                            id: "i",
                                            ctx: Load,
                                        },
                                    },
                                    iter: Located {
                                        location: Location {
                                            row: 6,
                                            column: 19,
                                        },
                                        custom: (),
                                        node: Tuple {
                                            elts: [
                                                Located {
                                                    location: Location {
                                                        row: 6,
                                                        column: 19,
                                                    },
                                                    custom: (),
                                                    node: Constant {
                                                        value: Int(
                                                            1,
                                                        ),
                                                        kind: None,
                                                    },
                                                },
                                                Located {
                                                    location: Location {
                                                        row: 6,
                                                        column: 23,
                                                    },
                                                    custom: (),
                                                    node: Constant {
                                                        value: Str(
                                                            "123",
                                                        ),
                                                        kind: None,
                                                    },
                                                },
                                            ],
                                            ctx: Load,
                                        },
                                    },
                                    body: [
                                        Located {
                                            location: Location {
                                                row: 7,
                                                column: 20,
                                            },
                                            custom: (),
                                            node: Expr {
                                                value: Located {
                                                    location: Location {
                                                        row: 7,
                                                        column: 20,
                                                    },
                                                    custom: (),
                                                    node: Constant {
                                                        value: ConfigComment(
                                                            "test",
                                                        ),
                                                        kind: None,
                                                    },
                                                },
                                            },
                                        },
                                    ],
                                    orelse: [],
                                    type_comment: None,
                                },
                            },
                        ],
                        decorator_list: [],
                        returns: None,
                        type_comment: None,
                    },
                },
            ],
            decorator_list: [],
        },
    },
]
